--- a/Verification_Level2RCT.Rmd
+++ b/Verification_Level2RCT.Rmd
@@ -91,6 +91,9 @@ updateProgress <- NULL
 sigma <- 0
 
 #generate matrices
+
+##Q for ZH: What is sigma vs rho? Is sigma related to rho in the code? Is sigma a matrix of rho? Do I need to reset rho and sigma in the parameters for each correlation? Is sigma set to 1 number or a matrix?
+
 #corr = 0
 power.corr0 <- power.blockedRCT.2(M=M, MDES=MDES, Ai=Ai, J=J, n.j=n.j, p=p,                alpha=alpha, numCovar.1=numCovar.1, numCovar.2 = numCovar.2,                R2.1=R2.1, R2.2=R2.2, ICC=ICC, mod.type = mod.type, 
                sigma = sigma,
@@ -226,7 +229,8 @@ powerUp.M1 <- powerUp$power
 
 
 ## Q FOR ZH/KP: What is the diff bt looking at indiv power and M=1?
-#run power with M=1 from the package  - DOESNT RUN
+#run power with M=1 from our package  - DOESNT RUN
+#reset rho and sigma?
 power.M1 <- power.blockedRCT.2(M=1, MDES=MDES, Ai=1, J=J, n.j=n.j, p=p,                alpha=alpha, numCovar.1=numCovar.1, numCovar.2 = numCovar.2,                R2.1=R2.1, R2.2=R2.2, ICC=ICC, mod.type = mod.type, 
                sigma = sigma,
                rho = 0, omega = omega, tnum = tnum, snum = snum, ncl = ncl,
@@ -256,18 +260,20 @@ powerUpvalidtable
 #set margin of error 
 me <- 0.01
 
-####ASK ZH: Where is the rho (correlation) parameter for MDES calc?
+####ASK ZH: Where is the rho (correlation) parameter for MDES calc? How do I switch out the correlation? Is it sigma?
   ##generate power for indiv, BH, corr = 0
   ## is numFalse the same as Ai?
 
+## cor = 0
 #indiv, BH
-test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = power.corr0["BH", "indiv"], power.definition = "indiv", MTP = "BH", marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
+test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = power.corr0["BH", "indiv"], power.definition = "indiv", MTP = "BH", marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, sigma = sigma, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
 
 test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
 
 
-#indiv, BH
-test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = power.corr0["BH", "indiv"], power.definition = "indiv", MTP = "BH", marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
+##ASK ZH: What are the categories for diff power.definition?
+#min1, HO
+test.MDES <- MDES.blockedRCT.2(M = M, numFalse = M, Ai_mdes = M, J = J, n.j = n.j, power = power.corr0["HO", "min1"], power.definition = "min1", MTP = "HO", marginError = 0.05, p = p, alpha = 0.05, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2, R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = mod.type, omega = omega,tnum = tnum, snum = snum, ncl = ncl, updateProgress = updateProgress)
 
 test.MDES[1] < (MDES + me) & test.MDES[1] > (MDES - me)
 
