--- a/Validation/power_mdes_sample__i1_2_constant_block.Rmd
+++ b/Validation/power_mdes_sample__i1_2_constant_block.Rmd
@@ -95,7 +95,7 @@ runPump <- TRUE
 
 `r colorize("We will be adding Westfall-Young step down adjustment later on.", "red")`
 
-```{r rho0.5numFalseMRun02, warning = FALSE, message = FALSE}
+```{r rho0.5numFalseMRun01, warning = FALSE, message = FALSE}
 blocked_i1_2c_compare_results <- validate_power_blocked_i1_2cfr(rho = rho, ncl = ncl, procs = procs, design = design, 
                                                                 M = M, MDES = MDES,
                                                                 p.j = p.j,p.j.range = p.j.range, S = S, B = B, 
@@ -113,7 +113,7 @@ pander::pandoc.table(blocked_i1_2c_compare_results, paste0("PowerSimulation_", "
                      style = "grid", split.tables = 100)
 ```
 
-##### M = 3,numFalse = M, J = 20, n.j  = 75, rho = (0.5, 0.5, 0.5), MDES = (0.125, 0.125, 0.125), R2 = (0,0,0)
+##### M = 3, numFalse = M, J = 20, n.j  = 75, rho = (0.5, 0.5, 0.5), MDES = (0.125, 0.125, 0.125), R2 = (0,0,0)
 
 ```{r rho0.5numFalseMSpecs02, warning = FALSE, message = FALSE}
 # ICC needs to be zero for constant and fixed effets
@@ -151,7 +151,63 @@ runPump <- TRUE
 
 `r colorize("We will be adding Westfall-Young step down adjustment later on.", "red")`
 
-```{r rho0.5numFalseMRun, warning = FALSE, message = FALSE}
+```{r rho0.5numFalseMRun02, warning = FALSE, message = FALSE}
+blocked_i1_2c_compare_results <- validate_power_blocked_i1_2cfr(rho = rho, ncl = ncl, procs = procs, design = design, 
+                                                                M = M, MDES = MDES,
+                                                                p.j = p.j,p.j.range = p.j.range, S = S, B = B, 
+                                                                tnum = tnum, J = J, 
+                                                                n.j = n.j, theta = theta, omega = omega, 
+                                                                Gamma.00 = Gamma.00, sig.sq = sig.sq,
+                                                                alpha = alpha, ICC = ICC, R2.2 = R2.2, R2.1 = R2.1, 
+                                                                maxT = maxT, rho.0_lev1 = rho.0_lev1,
+                                                                rho.0_lev2 = rho.0_lev2, rho.1_lev2 = rho.1_lev2, 
+                                                                check = check, storage_path = storage_path, 
+                                                                validation_name = validation_name, runSim = runSim, 
+                                                                runPump = runPump)
+
+pander::pandoc.table(blocked_i1_2c_compare_results, paste0("PowerSimulation_", "rho_", rho,"_falseNull_",M), 
+                     style = "grid", split.tables = 100)
+```
+
+##### M = 3, numFalse = M, J = 20, n.j  = 50, rho = (0.5, 0.5, 0.5), MDES = (0.125, 0.125, 0.125), R2 = (0,0,0)
+
+```{r rho0.5numFalseMSpecs03, warning = FALSE, message = FALSE}
+# ICC needs to be zero for constant and fixed effets
+design <- c("Blocked_i1_2c")
+procs <- c("Bonferroni", "BH", "Holm") 
+M <- 3 
+MDES <- rep(0.125, M) 
+rho <- c(0.5)
+ncl <-2 
+S = 2 # Number of samples for Monte Carlo Simulation.
+B = 2 # Number of samples for WestFall-Young. The equivalent is snum in our new method.
+tnum = 10000 # Number of test statistics (samples) for all procedures other than Westfall-Young. The default is set at 10,000.
+J = 20 
+n.j = 50 
+p.j <- 0.5 
+p.j.range <- rep(0.5,J) 
+theta <- matrix(0,M,M) 
+diag(theta) <- 0 
+omega <- rep(0,M) 
+Gamma.00 <- rep(0,M) 
+sig.sq <- rep(1,M)
+alpha <- 0.05 
+ICC <- rep(0, M) 
+R2.2 <- rep(0,M)  
+R2.1 <- rep(0,M) 
+maxT <- FALSE 
+check <- FALSE # Usually for checking the code. Do not need to  
+storage_path <- "./Validation/data"
+validation_name <- "Blocked_i1_2c"
+runSim <- TRUE
+runPump <- TRUE
+```
+
+`r colorize("Individual Statistical power is estimated to be around 0.8. Please check the table below for estimations of other definitions of statistical power. Across all power definitions, estimation results across the __PUMP__ package, __Monte Carlo Simulation__ results and __PowerUp__ package are about the same as detailed below.", "green")`
+
+`r colorize("We will be adding Westfall-Young step down adjustment later on.", "red")`
+
+```{r rho0.5numFalseMRun03, warning = FALSE, message = FALSE}
 blocked_i1_2c_compare_results <- validate_power_blocked_i1_2cfr(rho = rho, ncl = ncl, procs = procs, design = design, 
                                                                 M = M, MDES = MDES,
                                                                 p.j = p.j,p.j.range = p.j.range, S = S, B = B, 
@@ -175,10 +231,11 @@ In this section, we validate the derived minimum detectable effect size function
 
 Below is a brief description of input parameters for the __mdes__ function from the __pump__ package. For more details, please refer to the paper here [Insert Later].
 
-
 ## Power: 0.65 - 0.87
 
 Below, we have input parameters of number of outcomes, minimum detectable effect size, statistical power, significance level that would estimate a high statistical power value of above __0.65__ to __1.00__ for different definitions of power. This estimated power value is used as an input to the mdes function where we validate if the _returned_ __mdes__ value is close to the __mdes__ value that was inputted to provide the estimated power.
+
+##### M = 3, numFalse = M, J = 20, n.j  = 50, rho = (0.5, 0.5, 0.5), MDES = (0.125, 0.125, 0.125), R2 = (0,0,0)
 
 ```{r mdesCommonInputs02, message = FALSE,warning = FALSE}
 M <- 3
@@ -186,7 +243,7 @@ MDES <- 0.125
 numFalse <- 3
 J <- 20
 n.j <- 50
-R2.1 <- 0.5
+R2.1 <- 0
 R2.2 <- 0
 p <- 0.5
 alpha <- 0.05
@@ -201,34 +258,40 @@ ICC <- 0
 omega <- NULL
 ```
 
+```{r readPowerTable01, warning= FALSE, message = FALSE, echo = FALSE}
 
-### Read the Power Table In Here
+# Reading the Power Table in For the corresponding specified parameters
 
+  # R-Squared for level 1 covariates
+  R2_1 <- rep(R2.1, M)
+  R2_1 <- paste(R2_1, collapse = '')
+  R2_1 <- stringr::str_remove_all(R2_1, "\\.")
 
+  # rho: correlation between outcomes
+  rho_1 <- paste(rho, collapse = '')
+  rho_1 <- stringr::str_remove_all(rho_1, "\\.")
+  
+  # MDES: minimum detectable effect size
+  MDES_1 <- rep(MDES, M)
+  mdes_1 <- paste(MDES_1, collapse = '')
+  mdes_1 <- stringr::str_remove_all(mdes_1, "\\.")
+
+  simulation_results <- paste0(validation_name,"_",S, "_", "simsamples", "_", M, "_", "M","_", mdes_1,"_",
+                               "MDES", "_", J, "_", "J", "_", n.j, "_", "nj","_",rho_1, "_rho_", R2_1,"_R_Squared_",
+                               "comparison_results",".RDS")
+  power_results <- readRDS(file = here::here("Validation/data",simulation_results))
+
+```
 
 ### BF Validation
-
-In this section, we are estimating statistical powers to be inputted to the mdes function.
-
-```{r powerMdesBonf02}
-# Power generation with specifications
-power_M3_BF_MDES0125 <- pum::power_blocked_i1_2c(M = M, MTP = "Bonferroni", MDES = MDES, 
-                                                 numFalse = numFalse, J = J, n.j = n.j, 
-                                                 R2.1 = R2.1, p = p, alpha = alpha, 
-                                                 numCovar.1 = numCovar.1, numCovar.2 = numCovar.2,
-                                                 rho = rho,tnum = tnum, snum = snum, ncl = 8)
-power_M3_BF_MDES0125 <- as.data.frame(power_M3_BF_MDES0125) %>%
-                            tibble::rownames_to_column(var = "MTP")
-pander::pandoc.table(power_M3_BF_MDES0125, style = "grid", split.tables = 90, caption = "Estimated Power Values as inputs to derived MDES function")
-```
 
 #### Individual Power
 
 `r colorize("The Bonferroni __adjusted MDES__ and the __Target MDES__ are within an acceptable margin of error for the specified targetted power. The __adjusted MDES__ is estimated at the __corresponding__ individual power in the table below. The __corresponding__ individual power is the power at which our MDES method stops looking for a mdes value close to the target mdes.", "green")`
 
-```{r mdesBonfIndiv02}
+```{r mdesBonfIndiv01, message = FALSE, echo = FALSE}
 mdes_0125_bonf_indiv <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse,J = J, n.j = n.j, 
-                                                power = power_M3_BF_MDES0125[which(power_M3_BF_MDES0125$MTP == "BF"), "indiv"],
+                                                power = power_results[which(power_results$MTP == "Bonferroni"), "pum_indiv"],
                                                 power.definition = "indiv", MTP = "BF", marginError = marginError,
                                                 p = p, alpha = alpha, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2,
                                                 R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = "constant", 
@@ -238,30 +301,18 @@ mdes_0125_bonf_indiv <- as.data.frame(mdes_0125_bonf_indiv) %>%
 mdes_0125_bonf_indiv$MTP <- "Bonferroni"
 mdes_0125_bonf_indiv$TargettedMDES <- MDES
 colnames(mdes_0125_bonf_indiv)[4] <- "Targetted MDES"
-mdes_0125_bonf_indiv <- mdes_0125_bonf_indiv[, c(1,2,4,3)]
-pander::pandoc.table(mdes_0125_bonf_indiv, style = "grid", split.tables = 90)
+mdes_0125_bonf_indiv$TargettedIndivPower <- power_results[which(power_results$MTP == "Bonferroni"), "pum_indiv"]
+colnames(mdes_0125_bonf_indiv)[5] <- "Targetted indiv power"
+mdes_0125_bonf_indiv <- mdes_0125_bonf_indiv[, c(1,2,4,3,5)]
 ```
 
-### BH Validation
-
-In this section, we are estimating statistical powers to be inputted to the mdes function.
-
-```{r powerMdesBH02}
-power_M3_BH_MDES0125 <- pum::power_blocked_i1_2c(M = M, MTP = "BH", MDES = MDES, numFalse = numFalse, J = J, n.j = n.j, 
-                                                  R2.1 = R2.1, p = p, alpha = alpha, numCovar.1 = numCovar.1, 
-                                                  numCovar.2 = numCovar.2,
-                                                  rho = rho,tnum = tnum, snum = snum, ncl = ncl)
-power_M3_BH_MDES0125 <- as.data.frame(power_M3_BH_MDES0125) %>%
-                            tibble::rownames_to_column(var = "MTP")
-pander::pandoc.table(power_M3_BH_MDES0125, style = "grid", split.tables = 90)
-```
 #### Individual Power
 
 `r colorize("The Benjamini Hocheberg __adjusted MDES__ and the __Target MDES__ are within an acceptable margin of error for the __targetted__ individual power. The __adjusted MDES__ is estimated at the __corresponding__ individual power in the table below. The __corresponding__ individual power is the power at which our MDES method stops looking for a mdes value close to the target mdes.", "green")`
 
-```{r mdesBHIndiv02}
+```{r mdesBHIndiv01, message = FALSE, echo = FALSE}
 mdes_0125_bh_indiv <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse, J = J, n.j = n.j, 
-                                              power = power_M3_BH_MDES0125[which(power_M3_BH_MDES0125$MTP == "BH"), "indiv"],
+                                              power = power_results[which(power_results$MTP == "BH"), "pum_indiv"],
                                               power.definition = "indiv", MTP = "BH", marginError = marginError,
                                               p = p, alpha = alpha, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2,
                                               R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = "constant", 
@@ -271,9 +322,9 @@ mdes_0125_bh_indiv <- as.data.frame(mdes_0125_bh_indiv) %>%
 mdes_0125_bh_indiv$MTP <- "Benjamini_Hocheberg"
 mdes_0125_bh_indiv$TargettedMDES <- MDES
 colnames(mdes_0125_bh_indiv)[4] <- "Targetted MDES"
-mdes_0125_bh_indiv <- mdes_0125_bh_indiv[, c(1,2,4,3)]
-pander::pandoc.table(mdes_0125_bh_indiv, style = "grid", split.tables = 90)
-
+mdes_0125_bh_indiv$TargettedIndivPower <- power_results[which(power_results$MTP == "BH"), "pum_indiv"]
+colnames(mdes_0125_bonf_indiv)[5] <- "Targetted indiv power"
+mdes_0125_bh_indiv <- mdes_0125_bh_indiv[, c(1,2,4,3,5)]
 ```
 
 #### Minimum Power
@@ -313,22 +364,6 @@ pander::pandoc.table(power_M3_HO_MDES0125, style = "grid", split.tables = 90)
 #### Individual Power
 
 `r colorize("The Holms __adjusted MDES__ and the __Target MDES__ are within an acceptable margin of error for the targetted individual power. The __adjusted MDES__ is estimated at the __corresponding__ individual power in the table below. The __corresponding__ individual power is the power at which our MDES method stops looking for a mdes value close to the target mdes.", "green")`
-
-```{r mdesHOIndiv02}
-mdes_0125_holms_indiv1 <- pum::mdes_blocked_i1_2c(M = M, numFalse = numFalse,J = J, n.j = n.j, 
-                                                  power = power_M3_HO_MDES0125[which(power_M3_HO_MDES0125$MTP == "HO"), "indiv"],
-                                                  power.definition = "indiv", MTP = "HO", marginError = marginError,
-                                                  p = p, alpha = alpha, numCovar.1 = numCovar.1, numCovar.2 = numCovar.2,
-                                                  R2.1 = R2.1, R2.2 = R2.2, ICC = ICC, mod.type = "constant", 
-                                                  rho = rho, omega = omega,tnum = tnum, snum = snum, ncl = ncl)
-mdes_0125_holms_indiv1 <- as.data.frame(mdes_0125_holms_indiv1) %>%
-                            tibble::rownames_to_column(var = "MTP")
-mdes_0125_holms_indiv1$MTP <- "Benjamini_Hocheberg"
-mdes_0125_holms_indiv1$TargettedMDES <- MDES
-colnames(mdes_0125_holms_indiv1)[4] <- "Targetted MDES"
-mdes_0125_holms_indiv1 <- mdes_0125_holms_indiv1[, c(1,2,4,3)]
-pander::pandoc.table(mdes_0125_holms_indiv1, style = "grid", split.tables = 90)
-```
 
 #### Minimum Power
 
