--- a/Validation/Validate_power_blocked_i1.Rmd
+++ b/Validation/Validate_power_blocked_i1.Rmd
@@ -32,26 +32,20 @@ We compare results of the derived methods against Monte Carlo Simulations & the 
 knitr::opts_chunk$set(cache = FALSE, warning = FALSE, message = FALSE, echo = FALSE)
 ```
 
-```{r libraries}
+```{r setup}
 library(here)
 library(pander)    # For good table format
 
 # default tables to round to 3 digits
 panderOptions('round', 3)
+
+# simulation and user parameters
+source(here::here("Validation/Simulations", "params.R"))
+
+# validate MDES and sample size?
+validate.mdes.ss = FALSE
 ```
 
-```{r scriptFiles}
- # MTP Westfall-Young
-source(here::here("Validation/Simulations", "adjust_WY.R"))
-# data generating function
-source(here::here("Validation/Simulations", "gen_data.R"))
-# Estimate power for each of the designs by running data generating function S sample times and fitting models to estimate power.
-source(here::here("Validation/Simulations", "estimate_power_with_simulation.R"))
-# Wrapping and creating 
-source(here::here("Validation/Simulations", "validate_power.R"))
-# For coloring texts and other purposes
-source(here::here("Validation/Simulations", "misc.R")) 
-```
 
 # Power Validation
 
@@ -63,98 +57,12 @@ If you are previewing this in html, please click on the code section to review m
 
 This section sets up the simulation-level parameters, such as how many monte carlo samples to draw.
 
-```{r simulation.parameters.setup, echo = TRUE}
-
-sim.params.list <- list(
-    S = 100         # Number of samples for Monte Carlo Simulation
-  , B = 2            # Number of samples for WestFall-Young. The equivalent is snum in our new method.
-  , maxT = FALSE     # In WY procedure, whether to adjust based on ordered rawp values or ordered rawT values
-  , alpha = 0.05     # Significance level
-  , MoE = 0.05       # Margin of error
-  , p.j = 0.5        # Binomial assignment probability
-  , tnum = 10000     # Number of test statistics (samples) for all procedures other than Westfall-Young
-  , ncl = 2          # Number of computer clusters (max on RStudio Server is 16)
-  , max.iter = 20    # Number of MDES and sample size iterations
-  , procs = c("Bonferroni", "BH", "Holm")
-  # , procs = c("Bonferroni", "BH", "Holm", "WY-SS", "WY-SD")
-                     # Multiple testing procedures to compute power for 
-  , runSim = TRUE    # If TRUE, we will re-run the simulation. If FALSE, we will pull previous run result.
-  , runPump = TRUE   # If TRUE, we will run method from our package. If FALSE, we will pull previous run result.
-  , check = FALSE    # Run checks such as printing out quantities
-)
+```{r sim.params}
+# print(sim.params.list)
 ```
 
-This section sets up the model parameters, such as the number of outcomes and correlation structures.
-
-```{r complex.user.parameters.setup, echo = TRUE}
-# optional: if you want more complicated parameter choices, set them yourself
-# otherwise reasonable defaults are assumed
-
-# rho.default <- NULL
-
-### school and district assignments
-# N-length vector of individual school assignments i.e. (1,1,2,2,3,3)
-# S.j <-
-# N-length vector of individual district assignments i.e. (1,1,1,2,2,2)
-# S.k <-
-
-### covariates
-# rho.D <- 
-# rho.X <- 
-# rho.C <- 
-
-### random effects and impacts
-# rho.w <- 
-# rho.z <- 
-# rho.u <-
-# rho.v <- 
-# rho.r <- 
-# theta.wz <-
-# theta.uv <-
-```
-
-```{r user.params.setup, echo = TRUE}
-# assumes same correlation structure across all outcomes, covariates, random effects, etc.
-# assumes equal sized schools that are evenly split between districts
-
-M <- 3
-rho.default <- 0.5
-default.rho.matrix <- gen_corr_matrix(M = M, rho.scalar = rho.default)
-
-user.params.list <- list(
-  M = 3                                   # number of outcomes
-  , J = 20                                # number of schools
-  , K = 2                                 # number of districts (still required for two-level model)
-  , n.j = 50                             # number of individuals per school
-  , rho.default = rho.default             # default rho value (optional)
-  , S.j = NULL                            # N-length vector of indiv school assignments (optional)
-  , S.k = NULL                            # N-length vector of indiv district assignments (optional)
-  ################################################## grand mean otucome and impact
-  , Xi0 = 0                               # scalar grand mean outcome under no treatment
-  , ATE_ES = rep(0.125, M)                 # minimum detectable effect size      
-  ################################################## level 3: districts
-  , R2.3 = rep(0, M)                      # percent of district variation explained by district covariates
-                                          # for 2-level model, set to 0
-  , rho.D = default.rho.matrix            # MxM correlation matrix of district covariates
-  , ICC.3 = rep(0, M)                     # district intraclass correlation
-                                          # for 2-level model, set to 0
-  , omega.3 = 0                           # ratio of district effect size variability to random effects variability
-  , rho.w = default.rho.matrix            # MxM matrix of correlations for district random effects
-  , rho.z = default.rho.matrix            # MxM matrix of correlations for district impacts
-  , theta.wz = matrix(0, M, M)            # MxM matrix of correlations between district random effects and impacts
-  ################################################## level 2: schools
-  , R2.2 = rep(0, M)                      # percent of school variation explained by school covariates
-  , rho.X = default.rho.matrix            # MxM correlation matrix of school covariates
-  , ICC.2 = rep(0.5, M)                   # school intraclass correlation	
-  , omega.2 = 0                           # ratio of school effect size variability to random effects variability
-  , rho.u = default.rho.matrix            # MxM matrix of correlations for school random effects
-  , rho.v = default.rho.matrix            # MxM matrix of correlations for school impacts
-  , theta.uv = matrix(0, M, M)            # MxM matrix of correlations between school random effects and impacts
-  ################################################## level 1: individuals
-  , R2.1 = rep(0, M)                      # percent of indiv variation explained by indiv covariates
-  , rho.C = default.rho.matrix            # MxM correlation matrix of individual covariates
-  , rho.r = default.rho.matrix            # MxM matrix of correlations for individual residuals 
-)
+```{r user.params}
+# print(user.params.list)
 ```
 
 ### Setup 1: School size 100
@@ -385,15 +293,16 @@ params.file.base <- gen_params_file_base(user.params.list, sim.params.list, desi
 mdes.file <- find_file(params.file.base, type = 'mdes')
 if(length(mdes.file) == 0)
 {
-  stop(paste('Results not yet computed for given parameters:', params.file.base))
+  warning(paste('Results not yet computed for given parameters:', params.file.base))
+} else
+{
+  blocked_i1_2c_mdes_results_nj50 <- readRDS(mdes.file)
+  pander::pandoc.table(
+    blocked_i1_2c_mdes_results_nj50,
+    style = "grid", split.tables = 100, row.names = FALSE, 
+    caption = design
+  )
 }
-
-blocked_i1_2c_mdes_results_nj50 <- readRDS(mdes.file)
-pander::pandoc.table(
-  blocked_i1_2c_mdes_results_nj50,
-  style = "grid", split.tables = 100, row.names = FALSE, 
-  caption = design
-)
 ```
 
 ```{r 2f.mdesCombined}
@@ -403,15 +312,16 @@ params.file.base <- gen_params_file_base(user.params.list, sim.params.list, desi
 mdes.file <- find_file(params.file.base, type = 'mdes')
 if(length(mdes.file) == 0)
 {
-  stop(paste('Results not yet computed for given parameters:', params.file.base))
+  warning(paste('Results not yet computed for given parameters:', params.file.base))
+} else
+{
+  blocked_i1_2f_mdes_results_nj50 <- readRDS(mdes.file)
+  pander::pandoc.table(
+    blocked_i1_2f_mdes_results_nj50,
+    style = "grid", split.tables = 100, row.names = FALSE, 
+    caption = design
+  )    
 }
-
-blocked_i1_2f_mdes_results_nj50 <- readRDS(mdes.file)
-pander::pandoc.table(
-  blocked_i1_2f_mdes_results_nj50,
-  style = "grid", split.tables = 100, row.names = FALSE, 
-  caption = design
-)
 ```
 
 ```{r 2r.mdesCombined}
@@ -421,15 +331,16 @@ params.file.base <- gen_params_file_base(user.params.list, sim.params.list, desi
 mdes.file <- find_file(params.file.base, type = 'mdes')
 if(length(mdes.file) == 0)
 {
-  stop(paste('Results not yet computed for given parameters:', params.file.base))
+  warning(paste('Results not yet computed for given parameters:', params.file.base))
+} else
+{
+  blocked_i1_2r_mdes_results_nj50 <- readRDS(mdes.file)
+  pander::pandoc.table(
+    blocked_i1_2r_mdes_results_nj50,
+    style = "grid", split.tables = 100, row.names = FALSE, 
+    caption = design
+  )
 }
-
-blocked_i1_2r_mdes_results_nj50 <- readRDS(mdes.file)
-pander::pandoc.table(
-  blocked_i1_2r_mdes_results_nj50,
-  style = "grid", split.tables = 100, row.names = FALSE, 
-  caption = design
-)
 ```
 
 # Sample size validation
@@ -443,15 +354,16 @@ params.file.base <- gen_params_file_base(user.params.list, sim.params.list, desi
 sample.file <- find_file(params.file.base, type = 'sample')
 if(length(sample.file) == 0)
 {
-  stop(paste('Results not yet computed for given parameters:', params.file.base))
+  warning(paste('Results not yet computed for given parameters:', params.file.base))
+} else
+{
+  blocked_i1_2c_sample_results_nj50 <- readRDS(sample.file)
+  pander::pandoc.table(
+    blocked_i1_2c_sample_results_nj50,
+    style = "grid", split.tables = 100, row.names = FALSE,
+    caption = design
+  )
 }
-
-blocked_i1_2c_sample_results_nj50 <- readRDS(sample.file)
-pander::pandoc.table(
-  blocked_i1_2c_sample_results_nj50,
-  style = "grid", split.tables = 100, row.names = FALSE,
-  caption = design
-)
 ```
 
 
@@ -462,15 +374,16 @@ params.file.base <- gen_params_file_base(user.params.list, sim.params.list, desi
 sample.file <- find_file(params.file.base, type = 'sample')
 if(length(sample.file) == 0)
 {
-  stop(paste('Results not yet computed for given parameters:', params.file.base))
+  warning(paste('Results not yet computed for given parameters:', params.file.base))
+} else
+{
+  blocked_i1_2f_sample_results_nj50 <- readRDS(sample.file)
+  pander::pandoc.table(
+    blocked_i1_2f_sample_results_nj50,
+    style = "grid", split.tables = 100, row.names = FALSE,
+    caption = design
+  )
 }
-
-blocked_i1_2f_sample_results_nj50 <- readRDS(sample.file)
-pander::pandoc.table(
-  blocked_i1_2f_sample_results_nj50,
-  style = "grid", split.tables = 100, row.names = FALSE,
-  caption = design
-)
 ```
 
 ```{r 2r.sampleCombined}
@@ -480,13 +393,14 @@ params.file.base <- gen_params_file_base(user.params.list, sim.params.list, desi
 sample.file <- find_file(params.file.base, type = 'sample')
 if(length(sample.file) == 0)
 {
-  stop(paste('Results not yet computed for given parameters:', params.file.base))
+  warning(paste('Results not yet computed for given parameters:', params.file.base))
+} else
+{
+  blocked_i1_2r_sample_results_nj50 <- readRDS(sample.file)
+  pander::pandoc.table(
+    blocked_i1_2r_sample_results_nj50,
+    style = "grid", split.tables = 100, row.names = FALSE,
+    caption = design
+  )
 }
-
-blocked_i1_2r_sample_results_nj50 <- readRDS(sample.file)
-pander::pandoc.table(
-  blocked_i1_2r_sample_results_nj50,
-  style = "grid", split.tables = 100, row.names = FALSE,
-  caption = design
-)
 ```
