--- a/Validation/Validate_power_blocked_i1_2cfr.Rmd
+++ b/Validation/Validate_power_blocked_i1_2cfr.Rmd
@@ -309,7 +309,7 @@ user.params.list[['R2.2']] <- rep(0, M)
 
 ```{r 2c.mdesCombined}
 design <- "blocked_i1_2c"
-user.params.list[['omega.2']] = 0
+user.params.list[['omega.2']] <- 0
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 mdes.file <- find_file(params.file.base, type = 'mdes')
 if(length(mdes.file) == 0)
@@ -328,7 +328,7 @@ if(length(mdes.file) == 0)
 
 ```{r 2f.mdesCombined}
 design <- "blocked_i1_2f"
-user.params.list[['omega.2']] = 0.5
+user.params.list[['omega.2']] <- 0.5
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 mdes.file <- find_file(params.file.base, type = 'mdes')
 if(length(mdes.file) == 0)
@@ -347,7 +347,7 @@ if(length(mdes.file) == 0)
 
 ```{r 2r.mdesCombined}
 design <- "blocked_i1_2r"
-user.params.list[['omega.2']] = 0.5
+user.params.list[['omega.2']] <- 0.5
 params.file.base <- gen_params_file_base(user.params.list, sim.params.list, design)
 mdes.file <- find_file(params.file.base, type = 'mdes')
 if(length(mdes.file) == 0)
